<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="locations">Locations</string>
    <string name="cd_characters_image">Characters image</string>
    <string name="cd_episode_image">Episode image</string>
    <string name="cd_location_image">Location image</string>
</resources>